# fullstack-ai-marketing-platform

./: .cursorrules
asset-processing-service/: .gitignore  Dockerfile  docker-details.md  pyproject.toml
asset-processing-service/asset_processing_service/: api_client.py  config.py  job_processor.py  logger.py  main.py  media_processor.py  models.py
asset-processing-service/docs/: run-locally-and-railway.md
docs/: react-use-state-doc.md
docs/stripe/: prod-Webhook-signing-secret.md  resources.md  uat-Webhook-signing-secret.md
nextjs/: drizzle.config.ts  middleware.ts  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
nextjs/app/: layout.tsx  page.tsx
nextjs/app/(dashboard)/: layout.tsx
nextjs/app/(dashboard)/project/[projectid]/: loading.tsx  not-found.tsx  page.tsx
nextjs/app/(dashboard)/projects/: loading.tsx  page.tsx
nextjs/app/(dashboard)/settings/: loading.tsx
nextjs/app/(dashboard)/template/[templateId]/: page.tsx
nextjs/app/(dashboard)/templatess/: page.tsx
nextjs/app/(landing)/pricing/: page.tsx
nextjs/components/: GenerateContentStep.tsx  ProjectList.tsx  SideBarNav.tsx  Sidebar.tsx  SidebarToggle.tsx  SubscriptionManager.tsx  SubscriptionMessage.tsx  UserProfileSection.tsx
nextjs/components/project-detail/: ProjectDetailHeader.tsx  ProjectDetailView.tsx
nextjs/components/ui/: input.tsx
nextjs/lib/: config.ts  stripe.ts
nextjs/server/: mutation.ts  queries.ts
nextjs/server/db/: index.ts  schema-doc.md  schema.ts
nextjs/utils/: sidebarUtils.ts  timeUtils.ts
(+6 files in other folders)
