[tool.poetry]
name = "asset-processing-service"
version = "0.1.0"
description = ""
authors = ["sami sabir-idrissi <samisabiridrissi@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.dev-dependencies]
pytest = "^7.4.3"

[tool.poetry.scripts]
asset-processing-service = "asset_processing_service.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
